Formatting code, add comments